--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,21 @@
   }
 }
 
+.my-masonry-grid {
+  display: flex;
+  margin-left: -16px;
+  width: auto;
+}
+
+.my-masonry-grid_column {
+  padding-left: 16px;
+  background-clip: padding-box;
+}
+
+.my-masonry-grid_column > div {
+  margin-bottom: 16px;
+}
+
 .print-force-new-page {
   page-break-before: always;
 }
